--- a/ramics24/ramics24.tex
+++ b/ramics24/ramics24.tex
@@ -291,9 +291,8 @@ $\otimes$, but it need not itself be one. However, if $\psi$ preserves
 joins (as an upper adjoint it is generally only guaranteed to preserve
 meets), then it is the greatest underapproximation of $\otimes$.
 
-Note that there is no general recipe for underapproximation. In
-general an operation $\otimes$ may not have any underapproximations at
-all.
+There is no general recipe for tgunderapproximation. In general an
+operation $\otimes$ may not have any underapproximations at all.
 
 Similar definitions and statements can be made for monotone operations
 of any arity, including nullary, i.e., constants.  So, in particular,
